fix for sidescrolling on safari

--- a/NewSite/style.css
+++ b/NewSite/style.css
@@ -1,4 +1,5 @@
-html{
+html, body{
+    position: relative;
     max-width: 100%;
     overflow-x: hidden;
 }
